cc : Remove invalid DCHECK from draw_property_utils.cc

The DCHECK is invalid because we can have a render surface between the
target of scroll parent and scroll child.

BUG=663499
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2537053002
Cr-Commit-Position: refs/heads/master@{#435008}

Former-commit-id: 4de4c083e4e6500ef998c9a040388c1f58013b6e